修改问题:部分内容不显示

--- a/1-task9.html
+++ b/1-task9.html
@@ -6,7 +6,8 @@
     <link type="text/css" rel="stylesheet" href="1-task9.css"/>
 </head>
 <body>
-     <p class="title">
+<div class="content">
+<p class="title">
          <img src="1.jpg"/>
          <div id="titleRight">
              <form>
@@ -29,7 +30,7 @@
              <div id="left2right">313<br/>粉丝</div>
          </div>
          <div id="left3">
-             <img src="2.1.jpg"/><span>个人报表</span>
+             <div id="left3Title"><img src="2.1.jpg"/><div id="left3TitleRight">个人报表</div></div>
              <ul >
              <li><a>文件一</a>
              <ul>
@@ -140,8 +141,8 @@
                  </div>
              </div>
              <div id="rightMassage3">
-                 2016年4月份统计<br/>
-                     <div id="rightMassage312">
+                 <div id="total">2016年4月份统计</div>
+                  <div id="rightMassage3content">
                  <div id="rightMassage31">
                      <div id="rightMassage31Left">133311<br/>成交量</div>
                      <div id="rightMassage31Right"></div>
@@ -150,15 +151,15 @@
                      <div id="rightMassage32Left">133312<br/>成交量</div>
                      <div id="rightMassage32Right"></div>
                  </div>
-                     </div>
+                      <div id="rightMassage33">
+                          <div id="rightMassage33Left">133314<br/>成交量</div>
+                          <div id="rightMassage33Right"></div>
+                      </div>
                  <div id="rightMassage34">
                      <div id="rightMassage34Left">133313<br/>成交量</div>
                      <div id="rightMassage34Right"></div>
                  </div>
-                 <div id="rightMassage33">
-                     <div id="rightMassage33Left">133314<br/>成交量</div>
-                     <div id="rightMassage33Right"></div>
-                 </div>
+             </div>
              </div>
              <div id="rightMassage4">
                  <div id="rightMassage4Left">
@@ -251,8 +252,8 @@
                              </div>
                          </div>
                          <div id="4Massage3">
-                             <div id="MassageTitle3">详细描述<textarea rows="30px" rel="3px"></textarea></div>
-                             <div id="Massage3">该项目目前负责人是</div>
+                             <div id="MassageTitle3">详细描述</div>
+                             <div id="Massage3">该项目目前负责人是<textarea cols="4" rows="2"></textarea></div>
                          </div>
                          <div id="4Massage4">
                              <div id="4Massage4Left">
@@ -262,7 +263,6 @@
                              <input type="submit" value="搜索"/>
                              </div>
                          </div>
-
                      </div>
                  </div>
              </div>
@@ -393,5 +393,6 @@
              </div>
          </div>
      </div>
+</div>
 </body>
 </html>
