重构项目. 内容:header及aside部分.

--- a/1-task9.html
+++ b/1-task9.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>1-task9</title>
     <link type="text/css" rel="stylesheet" href="1-task9.css"/>
 </head>
 <body>
@@ -20,37 +20,38 @@
                  <span>登录</span>
              </div>
          </div>
-     <div class="left">
+     <div class="aside">
          <div id="left1">
              <img src="4.jpg"/>
              <div id="left1right">ABC123</div>
          </div>
          <div id="left2">
-             <div id="left2left">110<br/>收藏</div>
-             <div id="left2right">313<br/>粉丝</div>
+             <ul>
+             <li><div id="left2left">110<br/>收藏</div></li>
+             <li><div id="left2right">313<br/>粉丝</div></li>
+             </ul>
          </div>
          <div id="left3">
              <div id="left3Title"><img src="2.1.jpg"/><div id="left3TitleRight">个人报表</div></div>
-             <ul >
-             <li><a>文件一</a>
              <ul>
-                 <li><a>文档1</a></li>
-                 <li><a>文档2</a></li>
-             </ul>
-             </li>
-             <li><a>文件二</a>
-             <ul>
-                 <li><a>文档1</a></li>
-                 <li><a>文档2</a></li>
-             </ul>
-             </li>
-             <li>
-             <a>文件三</a>
-                 <ul>
-                     <li><a>文档1</a></li>
-                     <li><a>文档2</a></li>
-                 </ul>
-             </li>
+                 <li><a>文件一</a>
+                     <ul>
+                         <li><a>文档1</a></li>
+                         <li><a>文档2</a></li>
+                     </ul>
+                 </li>
+                 <li><a>文件二</a>
+                     <ul>
+                         <li><a>文档1</a></li>
+                         <li><a>文档2</a></li>
+                     </ul>
+                 </li>
+                  <li><a>文件三</a>
+                     <ul>
+                         <li><a>文档1</a></li>
+                         <li><a>文档2</a></li>
+                     </ul>
+                  </li>
              </ul>
          </div>
          <div id="left4">
@@ -129,7 +130,7 @@
              </div>
              <div id="rightMassage2">
                  <ul>
-                     <li>10:00am <br/><div id="money1"><span>$</span>1200</div></li>
+                     <li class="time_1">10:00am <br/><div id="money1"><span>$</span>1200</div></li>
                      <li>10:00am <br/><div id="money2"><span>$</span>1200</div></li>
                      <li>10:00am <br/><div id="money3"><span>$</span>1200</div></li>
                      <li>10:00am <br/><div id="money4"><span>$</span>1200</div></li>
