重构项目. 增加:正文item内容

--- a/new_1_task9.html
+++ b/new_1_task9.html
@@ -113,20 +113,24 @@
                 </div>
                 <div class="data-month">
                     <div class="month">2016年4月份统计</div>
-                    <ul >
-                        <li class="data">
-                            <div class="num">133311</div><div> class="quantity"成交量</div>
+                    <ul class="data" >
+                        <li class="color_43b29d">
+                            <div class="line"></div>
+                            <div class="num">133311</div><div class="quantity">成交量</div>
                             <span></span>
                         </li>
-                        <li class="data">
-                            <div class="num">133312</div><div> class="quantity"成交量</div>
+                        <li class="color_388ac1">
+                            <div class="line"></div>
+                            <div class="num">133312</div><div class="quantity">成交量</div>
                             <span></span>
                         </li>
-                        <li class="data">
+                        <li class="color_d04a36">
+                            <div class="line"></div>
                             <div class="num">133313</div><div class="quantity">成交量</div>
                             <span></span>
                         </li>
-                        <li class="data">
+                        <li class="color_e2cd46">
+                            <div class="line"></div>
                             <div class="num">133314</div><div class="quantity">成交量</div>
                             <span></span>
                         </li>
@@ -144,7 +148,8 @@
                                 <li>项目1</li>
                             </ul>
                         </div>
-                        <table>
+                        <div class="table-box">
+                        <table class="table">
                             <tr>
                                 <td class="cur">1</td><td>1</td><td>1</td><td>1</td><td>1</td>
                             </tr>
@@ -155,26 +160,33 @@
                                 <td>3</td><td>3</td><td>3</td><td>3</td><td>3</td>
                             </tr>
                         </table>
+                        </div>
                     </div>
                     <div class="item-right">
                         <div class="item-title">第一组项目</div>
-                        <div id="item-about">
-                                <div class="item-title">
+                        <div class="item-about">
+                                <div class="item-name">
                                     <div class="title">标题</div>
                                     <span>项目报表三</span>
                                 </div>
+                            <hr class="line line_x_1">
+                            <div class="mid-box">
                                 <div class="item-price">
                                     <div class="title">价格</div>
                                     <span>￥158</span>
                                 </div>
+                                <div class="line_y">
                                 <div class="item-people">
                                     <div class="title">负责人</div>
                                     <span>小A</span>
                                 </div>
+                            </div>
+                                <hr class="line line_x_2">
                                 <div class="item-describe">
                                     <div class="title">详细描述</div>
                                     <span class="title">该项目目前负责人是<textarea cols="4" rows="2"></textarea></span>
                                 </div>
+                                <hr class="line line_x_3">
                                 <div class="plan">
                                     <div class="title">
                                         <input type="checkbox"/>遵守保密协议</div>
@@ -187,7 +199,7 @@
                     </div>
             <div class="calender_charts">
                 <div class="calender">
-                    <div class="title">日历</div>
+                    <div class="item-title">日历</div>
                     <div class="select_box">
                         <select name="" >
                             <option value="">2016年</option>
@@ -367,7 +379,7 @@
                     </table>
                 </div>
                 <div class="charts">
-                    <div class="title">汽车行业排行榜</div>
+                    <div class="item-title">汽车行业排行榜</div>
                     <table cellspacing="0">
                         <thead>
                         <tr>
@@ -472,6 +484,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 </body>
 </html>
