重构项目. 增加:正文所有部分.

--- a/new_1_task9.html
+++ b/new_1_task9.html
@@ -141,7 +141,7 @@
                         <div class="item-title">第一组项目</div>
                         <div class="item-group">
                             <ul class="group-header">
-                                <li class="cur">项目1</li>
+                                <li class="spe">项目1</li>
                                 <li>项目1</li>
                                 <li>项目1</li>
                                 <li>项目1</li>
@@ -175,26 +175,22 @@
                                     <div class="title">价格</div>
                                     <span>￥158</span>
                                 </div>
-                                <div class="line_y">
                                 <div class="item-people">
                                     <div class="title">负责人</div>
                                     <span>小A</span>
                                 </div>
+                                <div class="line_y"></div>
                             </div>
                                 <hr class="line line_x_2">
                                 <div class="item-describe">
                                     <div class="title">详细描述</div>
-                                    <span class="title">该项目目前负责人是<textarea cols="4" rows="2"></textarea></span>
+                                    <span >该项目目前负责人是......</span>
                                 </div>
                                 <hr class="line line_x_3">
                                 <div class="plan">
-                                    <div class="title">
-                                        <input type="checkbox"/>遵守保密协议</div>
+                                        <input class="ensure" type="checkbox"/><label for="ensure">遵守保密协议</label>
+                                        <input class="submit" type="submit" value="搜索"/>
                                 </div>
-                                <div class="item-search">
-                                    <input type="submit" value="搜索"/>
-                                </div>
-                            </div>
                         </div>
                     </div>
             <div class="calender_charts">
@@ -206,7 +202,9 @@
                         </select>
                         <a href="javascript:;"></a>
                         <select name="" >
+
                             <option value="">4月</option>
+
                         </select>
                         <a href="javascript:;"></a>
                         <select name="" >
@@ -223,7 +221,7 @@
                         <li>六</li>
                         <li>日</li>
                     </ul>
-                    <table border="0" cellspacing="2">
+                    <table class="calender-table" border="0" cellspacing="2">
                         <tbody>
                         <tr>
                             <td>
